--- a/package.json
+++ b/package.json
@@ -2,5 +2,8 @@
   "devDependencies": {
     "@types/node": "^18.0.6",
     "typescript": "^4.7.4"
+  },
+  "dependencies": {
+    "node-fetch": "^3.2.9"
   }
 }
