Aperfeiçoamento dos menus desktop e mobile

--- a/frontend/store/blocks/header/header.jsonc
+++ b/frontend/store/blocks/header/header.jsonc
@@ -44,9 +44,13 @@
       "flex-layout.col#category-menu",
       "flex-layout.col#spacer",
       "search-bar",
+      "flex-layout.col#spacer",
+      "flex-layout.col#counter",
+      "flex-layout.col#spacer",
       "login",
-      //futuro mostrador de pontuação de fidelidade
+      "flex-layout.col#spacer",
       "locale-switcher",
+      "flex-layout.col#spacer",
       "minicart.v2"
     ]
   },
@@ -84,12 +88,12 @@
     ]
   },
   "flex-layout.row#1-mobile": {
-    "children": [
       "drawer",
       "logo#mobile",
       "flex-layout.col#spacer",
+      "flex-layout.col#counter",
+      "flex-layout.col#spacer",
       "login",
-      //futuro mostrador de pontuação de fidelidade/contador 
       "minicart.v2"
     ],
     "props": {
