--- a/apps/counter/react/tsconfig.json
+++ b/apps/counter/react/tsconfig.json
@@ -11,7 +11,8 @@
     ],
     "module": "esnext",
     "moduleResolution": "node",
-    "target": "es2017"
+    "target": "es2017",
+    "lib": ["ES2019", "dom"]
   },
   "include": [
     "./typings/*.d.ts",
